# app/src/main/resources/openapi.json
@@ -51,6 +51,10 @@
       "description": "Miscellaneous"
     },
     {
+      "name": "Validator",
+      "description": "Validate tokens"
+    },
+    {
       "name": "Actuator",
       "description": "Monitor and interact",
       "externalDocs": {
@@ -3121,6 +3125,53 @@
           }
         ]
       }
+    },
+    "/api/v1/validate/token/{appId}": {
+      "get": {
+        "tags": [
+          "Validator"
+        ],
+        "summary": "Validate a token",
+        "description": "Validate token and return details",
+        "operationId": "validateToken",
+        "parameters": [
+          {
+            "name": "appId",
+            "in": "path",
+            "description": "ID of the app to validate",
+            "required": true,
+            "schema": {
+              "type": "String"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Token validated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthToken"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - Missing/Incorrect Credentials"
+          },
+          "403": {
+            "description": "Forbidden - Invalid Credentials"
+          },
+          "500": {
+            "description": "Internal Server Error - Other Errors"
+          }
+        },
+        "security": [
+          {
+            "Token": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -3673,6 +3724,78 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/AppRolePermissionDto"
+            }
+          }
+        }
+      },
+      "AuthTokenPermission": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "roleId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          }
+        }
+      },
+      "AuthTokenRole": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          }
+        }
+      },
+      "AuthTokenUser": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "email": {
+            "type": "String"
+          },
+          "status": {
+            "type": "string"
+          },
+          "isValidated": {
+            "type": "boolean"
+          },
+          "isDeleted": {
+            "type": "boolean"
+          }
+        }
+      },
+      "AuthToken": {
+        "type": "object",
+        "properties": {
+          "appId": {
+            "type": "string"
+          },
+          "user": {
+            "$ref": "#/components/schemas/AuthTokenUser"
+          },
+          "roles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AuthTokenRole"
+            }
+          },
+          "permissions": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AuthTokenPermission"
             }
           }
         }
